--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "type": "cppdbg",
             "request": "launch",
             "cwd": "${workspaceFolder}",
-            "program": "${workspaceFolder}/build/x86_64/boot.dir/limine_entry.elf",
+            "program": "${workspaceFolder}/build/x86_64/boot.dir/mos_limine.elf",
             "MIMode": "gdb",
             "miDebuggerPath": "/usr/bin/x86_64-elf-gdb",
             "miDebuggerServerAddress": "localhost:1234",
@@ -40,7 +40,7 @@
             "type": "cppdbg",
             "request": "launch",
             "cwd": "${workspaceFolder}",
-            "program": "${workspaceFolder}/build/riscv64/boot.dir/riscv_simple.elf",
+            "program": "${workspaceFolder}/build/riscv64/boot.dir/mos_limine.elf",
             "MIMode": "gdb",
             "miDebuggerPath": "/usr/bin/riscv64-elf-gdb",
             "miDebuggerServerAddress": "localhost:1234",
