--- a/arch/Kconfig
+++ b/arch/Kconfig
@@ -18,8 +18,11 @@ config PLATFORM_DEBUG_ALL
     bool "Enable all platform-specific debug options"
     select PLATFORM_DEBUG_ALL_x86_64
     select PLATFORM_DEBUG_ALL_riscv64
+    select GENERIC_PLATFORM_DEBUG_ALL
     help
     Enable all platform-specific debug options
+
+source "arch/generic/Kconfig"
 
 source "arch/$ARCH/Kconfig"
 
