--- a/arch/riscv64/CMakeLists.txt
+++ b/arch/riscv64/CMakeLists.txt
@@ -1,7 +1,5 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 
-add_subdirectory(boot/simple)
-
 add_kernel_source(
     INCLUDE_DIRECTORIES
         ${CMAKE_CURRENT_LIST_DIR}/include/private
@@ -10,4 +8,6 @@ add_kernel_source(
     SOURCES
         riscv64_platform.c
         riscv64_platform_api.c
+        sbi/sbi-call.c
+        devices/sbi_console.c
 )
