init: chore updates

--- a/userspace/initrd/config/init.conf
+++ b/userspace/initrd/config/init.conf
@@ -26,7 +26,7 @@ symlink = /bin /initrd/bin
 symlink = /etc /initrd/etc
 symlink = /include /initrd/include
 
-# symlink = /lib /initrd/lib ; kernel handles this
+# symlink = /lib /initrd/lib ; bootstrapper handles this
 
 ## Mount configuration
 ##
@@ -59,7 +59,8 @@ mount = none /test-initrd userfs.cpiofs defaults
 ## Args: the arguments to the service executable
 ##
 
+service = /initrd/programs/syslogd
 service = /initrd/drivers/device-manager
 service = /initrd/drivers/blockdev-manager
 service = /initrd/programs/ramdisk
-service = /initrd/programs/syslogd
+service = /initrd/drivers/pci-daemon
