--- a/userspace/drivers/blockdev-layer-gpt/CMakeLists.txt
+++ b/userspace/drivers/blockdev-layer-gpt/CMakeLists.txt
@@ -7,7 +7,14 @@ generate_nanopb_proto(
     ${CMAKE_SOURCE_DIR}/proto/blockdev.proto
 )
 
-add_executable(blockdev-layer-gpt layer-gpt.cpp ${PROTO_SRCS} ${PROTO_HEADERS})
-add_to_initrd(TARGET blockdev-layer-gpt /programs)
+add_executable(blockdev-layer-gpt
+    main.cpp
+    layer-gpt.cpp
+    gptdisk.cpp
+    ${PROTO_SRCS}
+    ${PROTO_HEADERS}
+)
 
 target_link_libraries(blockdev-layer-gpt PRIVATE librpc::client librpc::server blockdev-manager-lib)
+
+add_to_initrd(TARGET blockdev-layer-gpt /programs)
