vfs: fix error code dereference

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "libs/nanopb/nanopb"]
 	path = libs/nanopb/nanopb
 	url = https://github.com/nanopb/nanopb
+[submodule "userspace/drivers/fs/ext4/lwext4"]
+	path = userspace/drivers/fs/ext4/lwext4
+	url = https://github.com/moodyhunter/lwext4
