--- a/userspace/initrd/config/init.conf
+++ b/userspace/initrd/config/init.conf
@@ -64,3 +64,4 @@ service = /initrd/drivers/device-manager
 service = /initrd/drivers/blockdev-manager
 service = /initrd/programs/ramdisk
 service = /initrd/drivers/pci-daemon
+service = /initrd/drivers/ext4fs
