ext4fs: cleanup

--- a/userspace/drivers/fs/ext4/CMakeLists.txt
+++ b/userspace/drivers/fs/ext4/CMakeLists.txt
@@ -11,6 +11,7 @@ generate_nanopb_proto(PROTO_SRCS PROTO_HDRS
 
 add_executable(ext4fs
     main.cpp
+    ext4fs.cpp
     ${PROTO_SRCS}
     ${PROTO_HDRS}
 )
@@ -18,6 +19,7 @@ add_executable(ext4fs
 target_link_libraries(ext4fs PRIVATE lwext4 blockdev-manager-lib)
 target_include_directories(ext4fs PRIVATE lwext4/include)
 target_compile_definitions(ext4fs PRIVATE -DCONFIG_USE_DEFAULT_CFG=1)
+target_compile_options(ext4fs PRIVATE -Wno-pedantic) # lwext4 is not pedantic clean
 
 target_link_libraries(ext4fs PRIVATE
     mos::include
