--- a/userspace/tests/CMakeLists.txt
+++ b/userspace/tests/CMakeLists.txt
@@ -4,6 +4,7 @@ add_subdirectory(echo-ipc)
 add_subdirectory(fork)
 add_subdirectory(librpc)
 add_subdirectory(ipc)
+add_subdirectory(memfd)
 add_subdirectory(libstdcxx)
 
 add_subdirectory(libc-test)
