--- a/userspace/tests/memfd/CMakeLists.txt
+++ b/userspace/tests/memfd/CMakeLists.txt
@@ -1,5 +1,5 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 
-add_executable(memfd_test main.cpp)
+add_executable(memfd-test main.cpp)
 
-add_to_initrd(TARGET memfd_test /tests)
+add_to_initrd(TARGET memfd-test /tests)
