--- a/userspace/drivers/virtiod/Cargo.toml
+++ b/userspace/drivers/virtiod/Cargo.toml
@@ -5,14 +5,11 @@ version = "0.1.0"
 
 [dependencies]
 clap = {version = "4.5.4", features = ["derive"]}
-libc = "0.2.153"
-librpc-rs = {path = "../../libs/librpc-rs", features = ["protobuf"]}
+libc = {version = "0.2.153", registry = "mos"}
+librpc-rs = {version = "0.1.1", features = ["protobuf"], registry = "mos"}
 log = "0.4.21"
 protobuf = "3.4.0"
 virtio-drivers = "0.7.3"
-
-[patch.crates-io]
-libc = {git = "https://github.com/moodyhunter/mos-rust-libc.git"}
 
 [build-dependencies]
 protobuf-codegen = "3.4.0"
