--- a/userspace/programs/init/CMakeLists.txt
+++ b/userspace/programs/init/CMakeLists.txt
@@ -6,7 +6,7 @@ add_executable(init main.cpp)
 target_link_libraries(init
     PRIVATE
         mos::argparse
-        mos::libconfig
+        mos::config
         mos::include
 )
 add_to_initrd(TARGET init /programs)
