userspace/dm,pci-daemon,init,libconfig: migrate to C++

--- a/userspace/initrd/config/dm.conf
+++ b/userspace/initrd/config/dm.conf
@@ -5,11 +5,14 @@
 ## The file syntax is same as `init.conf` file.
 ##
 
+[loads]
 ## Drivers configuration
 ## The drivers are loaded in the order they are specified in the file.
 ## The drivers listed below are always loaded regardless of the platform support.
-# load = /initrd/drivers/pci-daemon
+load = /initrd/drivers/pci-daemon
+load = /initrd/programs/ramdisk
 
+[drivers]
 ## Device - Driver mapping
 ## The device driver mapping is specified in the following format:
 ## <device> = <driver>
