--- a/userspace/initrd/config/init.conf
+++ b/userspace/initrd/config/init.conf
@@ -15,19 +15,22 @@
 ## is an array, but the 'device_manager.path' key is not.
 ########################################################################################
 
+[mkdir]
 ## Filesystems configuration
 ## The directories are created in the order they are specified in the file.
-mkdir = /sys
-mkdir = /test-initrd
-mkdir = /dev
+dir = /sys
+dir = /test-initrd
+dir = /dev
 
+[symlink]
 ## Symbolic links
-symlink = /bin /initrd/bin
-symlink = /etc /initrd/etc
-symlink = /include /initrd/include
+link = /bin /initrd/bin
+link = /etc /initrd/etc
+link = /include /initrd/include
 
-# symlink = /lib /initrd/lib ; bootstrapper handles this
+# link = /lib /initrd/lib ; bootstrapper handles this
 
+[mount]
 ## Mount configuration
 ##
 ## The mountpoints are mounted in the order they are specified in the file.
@@ -48,20 +51,18 @@ symlink = /include /initrd/include
 mount = none /sys sysfs defaults
 mount = none /test-initrd userfs.cpiofs defaults
 
+[services]
 ## Load Services
 ##
 ## The services are loaded in the order they are specified in the file.
 ##
 ## Format:
-##     service = <Path>
+##     <service name> = <Path>
 ##
 ## Path: the path to the service executable
 ## Args: the arguments to the service executable
 ##
-
-service = /initrd/programs/syslogd
-service = /initrd/drivers/device-manager
-service = /initrd/drivers/blockdev-manager
-service = /initrd/programs/ramdisk
-service = /initrd/drivers/pci-daemon
-service = /initrd/drivers/ext4fs
+syslogd = /initrd/programs/syslogd
+dm = /initrd/drivers/device-manager
+blockdev-manager = /initrd/drivers/blockdev-manager
+ext4-daemon = /initrd/drivers/ext4fs
