riscv64: platform support

--- a/kernel/arch/riscv64/CMakeLists.txt
+++ b/kernel/arch/riscv64/CMakeLists.txt
@@ -5,6 +5,10 @@ add_kernel_source(
     riscv64_platform_api.c
     sbi/sbi-call.c
     mm/mm.c
+    cpu/trap.c
+    cpu/plic.c
     cpu/interrupt.S
+    cpu/context_switch.S
     devices/sbi_console.c
+    devices/uart_driver.c
 )
