--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -23,7 +23,7 @@ add_custom_command(
 )
 
 add_custom_target(mos_syscall_decl DEPENDS ${MOS_SYSCALL_FILES})
-add_summary_item(UTILITY mos_syscall_decl "" "Generate syscall headers")
+add_summary_item(UTILITY mos_syscall_decl "Generate syscall headers")
 
 install(
     FILES ${MOS_SYSCALL_FILES}
