--- a/userspace/programs/lazybox/CMakeLists.txt
+++ b/userspace/programs/lazybox/CMakeLists.txt
@@ -18,3 +18,4 @@ lazybox_program(tree "List contents of directories in a tree-like format")
 lazybox_program(true "Do nothing, successfully")
 lazybox_program(clear "Clear the terminal screen")
 lazybox_program(rm "Remove files or directories")
+lazybox_program(write "A simple text writer")
