lazybox: add 'symlink' helper

--- a/userspace/programs/lazybox/CMakeLists.txt
+++ b/userspace/programs/lazybox/CMakeLists.txt
@@ -19,3 +19,4 @@ lazybox_program(true "Do nothing, successfully")
 lazybox_program(clear "Clear the terminal screen")
 lazybox_program(rm "Remove files or directories")
 lazybox_program(write "A simple text writer")
+lazybox_program(symlink "Create a symbolic link")
