--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -101,4 +101,7 @@ add_kernel_source(kmain.c ksyscall_entry.c ksyscall.c)
 generate_nanopb_proto(FILESYSTEM_PROTO_SRCS FILESYSTEM_PROTO_HEADERS ${CMAKE_SOURCE_DIR}/proto/mos_rpc.proto ${CMAKE_SOURCE_DIR}/proto/filesystem.proto)
 add_kernel_source(${FILESYSTEM_PROTO_SRCS} ${FILESYSTEM_PROTO_HEADERS})
 
+generate_nanopb_proto(SYSLOG_PROTO_SRCS SYSLOG_PROTO_HEADERS ${CMAKE_SOURCE_DIR}/proto/syslog.proto)
+add_kernel_source(${SYSLOG_PROTO_SRCS} ${SYSLOG_PROTO_HEADERS})
+
 add_subdirectory(tests)
