lazybox: add env util

--- a/userspace/programs/lazybox/CMakeLists.txt
+++ b/userspace/programs/lazybox/CMakeLists.txt
@@ -20,3 +20,4 @@ lazybox_program(clear "Clear the terminal screen")
 lazybox_program(rm "Remove files or directories")
 lazybox_program(write "A simple text writer")
 lazybox_program(symlink "Create a symbolic link")
+lazybox_program(env "Print environment variables")
