lazybox: add echo, pwd helper

--- a/userspace/programs/lazybox/CMakeLists.txt
+++ b/userspace/programs/lazybox/CMakeLists.txt
@@ -21,3 +21,5 @@ lazybox_program(rm "Remove files or directories")
 lazybox_program(write "A simple text writer")
 lazybox_program(symlink "Create a symbolic link")
 lazybox_program(env "Print environment variables")
+lazybox_program(echo "Display a line of text")
+lazybox_program(pwd "Print name of current/working directory")
