--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -34,7 +34,14 @@ jobs:
           echo 'SigLevel = Optional TrustAll' >> /etc/pacman.conf
           echo 'Server = https://repo.mooody.me/$repo/$arch' >> /etc/pacman.conf
 
-          pacman -Sy --noconfirm x86_64-mos-gcc x86_64-mos-binutils x86_64-mos-mlibc
+          pacman -Sy --noconfirm rustup \
+            mos-sdk \
+            x86_64-mos-gcc \
+            x86_64-mos-binutils \
+            x86_64-mos-mlibc \
+            x86_64-mos-nlohmann-json \
+            mos-llvm \
+            mos-rust
 
       - name: Configure CMake
         run: |
