chore: chore updates

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -47,11 +47,10 @@
                 "-serial", "chardev:serial_log",
                 "-serial", "chardev:serial-com2",
                 "-drive", "format=raw,file=fat:rw:${workspaceFolder}/build/x86_64/uefi-files/",
-                "-smp", "4",
+                "-smp", "1",
                 "-cpu", "max",
                 "-device", "virtio-gpu-pci",
-                "-drive", "file=${workspaceFolder}/rootfs.img,format=raw,if=virtio",
-                "-drive", "file=${workspaceFolder}/testblk,format=raw,if=virtio",
+                "-drive", "file=${workspaceFolder}/blockdev.img,format=raw,if=virtio",
                 "-vga", "none",
             ],
             "problemMatcher": [ ],
