--- a/userspace/programs/init/bootstrapper/CMakeLists.txt
+++ b/userspace/programs/init/bootstrapper/CMakeLists.txt
@@ -1,7 +1,7 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 
 generate_nanopb_proto(PROTO_SRCS PROTO_HDRS
-    ${CMAKE_SOURCE_DIR}/proto/mos_rpc.proto
+    ${CMAKE_SOURCE_DIR}/proto/mosrpc.proto
     ${CMAKE_SOURCE_DIR}/proto/filesystem.proto
 )
 
