--- a/userspace/drivers/blockdev-manager/CMakeLists.txt
+++ b/userspace/drivers/blockdev-manager/CMakeLists.txt
@@ -1,13 +1,5 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 
-generate_nanopb_proto(
-    PROTO_SRCS
-    PROTO_HEADERS
-    ${CMAKE_SOURCE_DIR}/proto/mosrpc.proto
-    ${CMAKE_SOURCE_DIR}/proto/blockdev.proto
-    ${CMAKE_SOURCE_DIR}/proto/filesystem.proto
-)
-
 add_library(blockdev-manager-lib INTERFACE)
 target_include_directories(blockdev-manager-lib INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
@@ -24,6 +16,7 @@ target_link_libraries(blockdev-manager
         blockdev-manager-lib
         librpc::client
         librpc::server
+        mos::rpc-protocols
 )
 
 add_to_initrd(TARGET blockdev-manager /drivers)
