--- a/userspace/programs/peekblock/CMakeLists.txt
+++ b/userspace/programs/peekblock/CMakeLists.txt
@@ -1,12 +1,5 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 
-generate_nanopb_proto(
-    PROTO_SRCS
-    PROTO_HEADERS
-    ${CMAKE_SOURCE_DIR}/proto/mosrpc.proto
-    ${CMAKE_SOURCE_DIR}/proto/blockdev.proto
-)
-
 add_executable(peekblock
     peekblock.cpp
     ${PROTO_SRCS}
@@ -15,4 +8,4 @@ add_executable(peekblock
 
 add_to_initrd(TARGET peekblock /programs)
 
-target_link_libraries(peekblock PRIVATE librpc::client nanopb blockdev-manager-lib)
+target_link_libraries(peekblock PRIVATE librpc::client nanopb blockdev-manager-lib mos::rpc-protocols)
