--- a/userspace/programs/ramdisk/CMakeLists.txt
+++ b/userspace/programs/ramdisk/CMakeLists.txt
@@ -1,12 +1,5 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 
-generate_nanopb_proto(
-    PROTO_SRCS
-    PROTO_HEADERS
-    ${CMAKE_SOURCE_DIR}/proto/mosrpc.proto
-    ${CMAKE_SOURCE_DIR}/proto/blockdev.proto
-)
-
 add_executable(ramdisk
     main.cpp
     ramdisk.cpp
@@ -17,9 +10,9 @@ add_executable(ramdisk
 target_link_libraries(ramdisk
     PRIVATE
         blockdev-manager-lib
-        nanopb
         librpc::client
         librpc::server
+        mos::rpc-protocols
 )
 
 add_to_initrd(TARGET ramdisk /programs)
